# code-2-code

./: .env.example  .geminiignore  .gitignore  GEMINI.md  Journey 1: Monitoring Financial Situation.md  Journey 3: Managing Finance Record Files.md  Journey 4: Supporting Multiple Books.md  Journey 5: Supporting Multiple Currencies.md  README.md  api_dependency_map.md  api_inventory.md  architecture_principles.md  config.py  convert_taskmaster_to_md.py  crud.py  customized_report_money_note_detailed_journeys.md  database.py  dependencies.py  final_functional_specification.md  functional_specs_introduction.md  gemini.md  gen_docs.py  gen_fs.py  gen_next_prd.py  gen_user_j.py  gen_user_journeys.py  helper_funcs.py  main.py  models.py  moneynote.db  next.md  next_items.md  next_steps.md  notes.txt  prompts.py  pyproject.toml  requirements.txt  schemas.py  security.py  steps.md  (+7 more)
.gemini/: settings.json
.taskmaster/: config.json  current_status.md  state.json
API_prompts/: 1.apiinvetory.sh  api_async_processing.md  api_authflows.md  api_businesslogic.md  api_datamodels.md  api_inventory.md  api_nfr.md  api_schema.md  config.sh  find_api_analyzemodels.sh  find_api_authflows.sh  find_api_businesslogic.sh  find_api_datamodels.sh  find_api_schema.sh  find_async_processing.sh  find_generated_api_inventory.sh  find_nfr.sh  generate_api_inventory.sh  map_dependencies.sh  setup_config.sh
api/: accounts.py  books.py  categories.py  payees.py  tags.py  users.py
archive/: final_functional_specification.md  functional_specs_introduction.md  journey_1_monitoring_financial_situation.md  (+3 more)
(+105 files in other folders)
