[project]
name = "AiDM-trial"
version = "0.1.0"
description = "AiDM Trial for generating FS from Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "mrkdwn-analysis>=0.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
